# USBProxy

./: .gitignore  README.md  USBProxy.sln  USBProxy.vgdbcmake
src/: CMakeLists.txt
src/Plugins/Devices/: CMakeLists.txt  DeviceProxy_Callback.cpp  DeviceProxy_Callback.h  DeviceProxy_EVS.cpp  DeviceProxy_LibUSB.cpp  DeviceProxy_LibUSB.h  DeviceProxy_Loopback.cpp  DeviceProxy_Loopback.h  DeviceProxy_NeoGeo.cpp  DeviceProxy_NeoGeo.h  DeviceProxy_Null.h  DeviceProxy_PS3.cpp  DeviceProxy_PS3.h  DeviceProxy_PS4.cpp  DeviceProxy_PS4.h  DeviceProxy_TCP.cpp  DeviceProxy_TCP.h  DeviceProxy_Xbox.cpp  DeviceProxy_Xbox.h  DeviceProxy_Xbox360.cpp  DeviceProxy_Xbox360.h  DeviceProxy_dot11.cpp  DeviceProxy_dot11.h  LibUSB_static.cpp
src/Plugins/Filters/: CMakeLists.txt  DeviceProxy_EVS.h  PacketFilter_A500.cpp  PacketFilter_A500.h  PacketFilter_EVS.cpp  PacketFilter_EVS.h  PacketFilter_NeoGeo.cpp  PacketFilter_PS3.cpp  PacketFilter_PS3.h  PacketFilter_PS4.cpp  PacketFilter_PS4.h  PacketFilter_Switch.cpp.save  PacketFilter_TG16Mini.cpp  PacketFilter_TG16Mini.h  PacketFilter_VCS.cpp  PacketFilter_VCS.h  PacketFilter_Xbox.cpp  PacketFilter_Xbox.h
src/Plugins/Hosts/: CMakeLists.txt  GadgetFS_static.cpp  HostProxy_GadgetFS.cpp  HostProxy_GadgetFS.h  HostProxy_GenMini.cpp  HostProxy_GenMini.h  HostProxy_PS3.cpp  HostProxy_PS3.h  HostProxy_PS4.cpp  HostProxy_PS4.h  HostProxy_Switch.cpp  HostProxy_Switch.h  HostProxy_Xbox.cpp  HostProxy_Xbox.h  Switch_static.cpp
src/lib/: ConfigParser.cpp  Device.cpp  Device.h  DeviceProxy.h  Manager.cpp  RelayReader.cpp  RelayWriter.cpp.save
src/tools/: CMakeLists.txt  usb-mitm.cpp
